--- a/src/app/modules/online-form/shared/components/pdf-loader/pdf-loader.component.scss
+++ b/src/app/modules/online-form/shared/components/pdf-loader/pdf-loader.component.scss
@@ -42,7 +42,7 @@
   border: 2px solid #000000;
   background-color: white;
   position: absolute;
-  z-index: 9900;
+  z-index: 499;
   /*font-size: 0.5rem!important;*/
   zoom: normal;
 }
